# mai-fa-sp-4-sem

./: .gitignore  CMakeLists.txt
SP/: .clang-format  CMakeLists.txt
SP/task1/: CMakeLists.txt  main.c  task1.c  vector.c  vector.h
SP/task2/: CMakeLists.txt  copy_file.c  find_string.c  main.c
SP/task3/: CMakeLists.txt  main.c  task3  task3.c
SP/task4/: CMakeLists.txt
SP/task4/client/: CMakeLists.txt  main.c
SP/task4/include/: msg.h
SP/task4/server/: CMakeLists.txt  main.c
SP/task5/: CMakeLists.txt  main.c  task5.c
SP/task6/client/: CMakeLists.txt  main.c
SP/task6/server/: CMakeLists.txt  main.c
SP/task7/: CMakeLists.txt  main.c
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_red_black_tree/include/: allocator_red_black_tree.h
allocator/allocator_red_black_tree/src/: allocator_red_black_tree.cpp
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
arithmetic/big_integer/include/: big_int.h
arithmetic/big_integer/src/: big_int.cpp
arithmetic/fraction/: CMakeLists.txt
arithmetic/fraction/include/: fraction.h
arithmetic/fraction/src/: fraction.cpp
arithmetic/fraction/tests/: CMakeLists.txt  test.cpp
associative_container/search_tree/binary_search_tree/AVL_tree/include/: AVL_tree.h
associative_container/search_tree/binary_search_tree/AVL_tree/tests/: AVL_tree_tests.cpp
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h
associative_container/search_tree/binary_search_tree/red_black_tree/include/: red_black_tree.h
associative_container/search_tree/binary_search_tree/scapegoat_tree/include/: scapegoat_tree.h
associative_container/search_tree/binary_search_tree/splay_tree/include/: splay_tree.h
associative_container/search_tree/binary_search_tree/splay_tree/tests/: splay_tree_tests.cpp
associative_container/search_tree/indexing_tree/b_plus_tree/include/: b_plus_tree.h
associative_container/search_tree/indexing_tree/b_plus_tree/tests/: b_plus_tree_tests.cpp
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/server_logger/: CMakeLists.txt
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
logger/server_logger/tests/: CMakeLists.txt  server.cpp  server.h  server_logger_tests.cpp
(+4 files in other folders)
